# pydantic-jsonlogic

./: Dockerfile  README.md  docker-compose.cache.json  docker-compose.yml  pyproject.toml
.github/workflows/: cleanup-packages.yml  tests.yml
pydantic_jsonlogic/: __init__.py
tests/: test_fields.py  test_model_integration.py
