[tool.poetry]
name = "pydantic-jsonlogic"
version = "0.1.0"
description = ""
authors = ["Youri Westerman <y.westerman@amsterdam.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.8.2"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
mypy = "^1.11.2"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
overwrite_in_place = true

[tool.mypy]
strict = true
