[project]
name = "pydantic-jsonlogic"
version = "0.1.0"
description = ""
authors = [
    {name = "Youri Westerman",email = "y.westerman@amsterdam.nl"},
]
readme = "README.md"
requires-python = "^3.13"

dependencies = [
    "pydantic (>=2.10.6,<3.0.0)",
]

[tool.poetry.group.dev.dependencies]
black = "^25.11.0"
isort = "^7.0.0"
mypy = "^1.19.0"
pytest = "^9.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
overwrite_in_place = true

[tool.mypy]
strict = true
